(lib,refac,test) upgrade libs, switch to JDK8, huge refactoring, improve code coverage and quality