@@ -3,16 +3,17 @@ package manon.user.repository;
 import lombok.RequiredArgsConstructor;
 import manon.user.document.User;
 import manon.user.form.UserUpdateForm;
-import manon.user.friendship.model.FriendshipEvent;
-import manon.user.registration.RegistrationState;
+import manon.user.model.FriendshipEvent;
+import manon.user.model.FriendshipEventCode;
+import manon.user.model.RegistrationState;
 import org.springframework.data.mongodb.core.MongoTemplate;
+import org.springframework.data.mongodb.core.query.Criteria;
+import org.springframework.data.mongodb.core.query.Query;
 import org.springframework.data.mongodb.core.query.Update;
 import org.springframework.stereotype.Repository;
 
+import java.util.Collections;
 import java.util.List;
-
-import static org.springframework.data.mongodb.core.query.Criteria.where;
-import static org.springframework.data.mongodb.core.query.Query.query;
 
 @Repository
 @RequiredArgsConstructor
@@ -23,31 +24,31 @@ public class UserRepositoryImpl implements UserRepositoryCustom {
     @Override
     public void update(String id, UserUpdateForm userUpdateForm) {
         mongoTemplate.updateFirst(
-                query(where("id").is(id)),
+                Query.query(Criteria.where(User.Field.ID).is(id)),
                 new Update()
-                        .set("nickname", userUpdateForm.getNickname())
-                        .set("email", userUpdateForm.getEmail()),
+                        .set(User.Field.NICKNAME, userUpdateForm.getNickname())
+                        .set(User.Field.EMAIL, userUpdateForm.getEmail()),
                 User.class).getMatchedCount();
     }
     
     @Override
     public void askFriendship(String userIdFrom, String userIdTo) {
         mongoTemplate.updateFirst(
-                query(where("id").is(userIdTo)),
+                Query.query(Criteria.where(User.Field.ID).is(userIdTo)),
                 new Update()
-                        .addToSet("friendshipRequestsFrom", userIdFrom)
-                        .addToSet("friendshipEvents", FriendshipEvent.builder()
-                                .event(FriendshipEvent.Code.TARGET_SENT_FRIEND_REQUEST)
-                                .params(List.of(userIdFrom))
+                        .addToSet(User.Field.FRIENDSHIP_REQUESTS_FROM, userIdFrom)
+                        .addToSet(User.Field.FRIENDSHIP_EVENTS, FriendshipEvent.builder()
+                                .code(FriendshipEventCode.TARGET_SENT_FRIEND_REQUEST)
+                                .params(Collections.singletonList(userIdFrom))
                                 .build()),
                 User.class);
         mongoTemplate.updateFirst(
-                query(where("id").is(userIdFrom)),
+                Query.query(Criteria.where(User.Field.ID).is(userIdFrom)),
                 new Update()
-                        .addToSet("friendshipRequestsTo", userIdTo)
-                        .addToSet("friendshipEvents", FriendshipEvent.builder()
-                                .event(FriendshipEvent.Code.YOU_SENT_FRIEND_REQUEST)
-                                .params(List.of(userIdFrom))
+                        .addToSet(User.Field.FRIENDSHIP_REQUESTS_TO, userIdTo)
+                        .addToSet(User.Field.FRIENDSHIP_EVENTS, FriendshipEvent.builder()
+                                .code(FriendshipEventCode.YOU_SENT_FRIEND_REQUEST)
+                                .params(Collections.singletonList(userIdFrom))
                                 .build()),
                 User.class);
     }
@@ -55,23 +56,23 @@ public class UserRepositoryImpl implements UserRepositoryCustom {
     @Override
     public void acceptFriendshipRequest(String userIdFrom, String userIdTo) {
         mongoTemplate.updateFirst(
-                query(where("id").is(userIdTo)),
+                Query.query(Criteria.where(User.Field.ID).is(userIdTo)),
                 new Update()
-                        .pull("friendshipRequestsFrom", userIdFrom)
-                        .addToSet("friends", userIdFrom)
-                        .addToSet("friendshipEvents", FriendshipEvent.builder()
-                                .event(FriendshipEvent.Code.YOU_ACCEPTED_FRIEND_REQUEST)
-                                .params(List.of(userIdFrom))
+                        .pull(User.Field.FRIENDSHIP_REQUESTS_FROM, userIdFrom)
+                        .addToSet(User.Field.FRIENDS, userIdFrom)
+                        .addToSet(User.Field.FRIENDSHIP_EVENTS, FriendshipEvent.builder()
+                                .code(FriendshipEventCode.YOU_ACCEPTED_FRIEND_REQUEST)
+                                .params(Collections.singletonList(userIdFrom))
                                 .build()),
                 User.class);
         mongoTemplate.updateFirst(
-                query(where("id").is(userIdFrom)),
+                Query.query(Criteria.where(User.Field.ID).is(userIdFrom)),
                 new Update()
-                        .pull("friendshipRequestsTo", userIdTo)
-                        .addToSet("friends", userIdTo)
-                        .addToSet("friendshipEvents", FriendshipEvent.builder()
-                                .event(FriendshipEvent.Code.TARGET_ACCEPTED_FRIEND_REQUEST)
-                                .params(List.of(userIdFrom))
+                        .pull(User.Field.FRIENDSHIP_REQUESTS_TO, userIdTo)
+                        .addToSet(User.Field.FRIENDS, userIdTo)
+                        .addToSet(User.Field.FRIENDSHIP_EVENTS, FriendshipEvent.builder()
+                                .code(FriendshipEventCode.TARGET_ACCEPTED_FRIEND_REQUEST)
+                                .params(Collections.singletonList(userIdFrom))
                                 .build()),
                 User.class);
     }
@@ -79,21 +80,21 @@ public class UserRepositoryImpl implements UserRepositoryCustom {
     @Override
     public void rejectFriendshipRequest(String userIdFrom, String userIdTo) {
         mongoTemplate.updateFirst(
-                query(where("id").is(userIdTo)),
+                Query.query(Criteria.where(User.Field.ID).is(userIdTo)),
                 new Update()
-                        .pull("friendshipRequestsFrom", userIdFrom)
-                        .addToSet("friendshipEvents", FriendshipEvent.builder()
-                                .event(FriendshipEvent.Code.YOU_REJECTED_FRIEND_REQUEST)
-                                .params(List.of(userIdFrom))
+                        .pull(User.Field.FRIENDSHIP_REQUESTS_FROM, userIdFrom)
+                        .addToSet(User.Field.FRIENDSHIP_EVENTS, FriendshipEvent.builder()
+                                .code(FriendshipEventCode.YOU_REJECTED_FRIEND_REQUEST)
+                                .params(Collections.singletonList(userIdFrom))
                                 .build()),
                 User.class);
         mongoTemplate.updateFirst(
-                query(where("id").is(userIdFrom)),
+                Query.query(Criteria.where(User.Field.ID).is(userIdFrom)),
                 new Update()
-                        .pull("friendshipRequestsTo", userIdTo)
-                        .addToSet("friendshipEvents", FriendshipEvent.builder()
-                                .event(FriendshipEvent.Code.TARGET_REJECTED_FRIEND_REQUEST)
-                                .params(List.of(userIdFrom))
+                        .pull(User.Field.FRIENDSHIP_REQUESTS_TO, userIdTo)
+                        .addToSet(User.Field.FRIENDSHIP_EVENTS, FriendshipEvent.builder()
+                                .code(FriendshipEventCode.TARGET_REJECTED_FRIEND_REQUEST)
+                                .params(Collections.singletonList(userIdFrom))
                                 .build()),
                 User.class);
     }
@@ -101,21 +102,21 @@ public class UserRepositoryImpl implements UserRepositoryCustom {
     @Override
     public void cancelFriendshipRequest(String userIdFrom, String userIdTo) {
         mongoTemplate.updateFirst(
-                query(where("id").is(userIdTo)),
+                Query.query(Criteria.where(User.Field.ID).is(userIdTo)),
                 new Update()
-                        .pull("friendshipRequestsFrom", userIdFrom)
-                        .addToSet("friendshipEvents", FriendshipEvent.builder()
-                                .event(FriendshipEvent.Code.TARGET_CANCELED_FRIEND_REQUEST)
-                                .params(List.of(userIdFrom))
+                        .pull(User.Field.FRIENDSHIP_REQUESTS_FROM, userIdFrom)
+                        .addToSet(User.Field.FRIENDSHIP_EVENTS, FriendshipEvent.builder()
+                                .code(FriendshipEventCode.TARGET_CANCELED_FRIEND_REQUEST)
+                                .params(Collections.singletonList(userIdFrom))
                                 .build()),
                 User.class);
         mongoTemplate.updateFirst(
-                query(where("id").is(userIdFrom)),
+                Query.query(Criteria.where(User.Field.ID).is(userIdFrom)),
                 new Update()
-                        .pull("friendshipRequestsTo", userIdTo)
-                        .addToSet("friendshipEvents", FriendshipEvent.builder()
-                                .event(FriendshipEvent.Code.YOU_CANCELED_FRIEND_REQUEST)
-                                .params(List.of(userIdFrom))
+                        .pull(User.Field.FRIENDSHIP_REQUESTS_TO, userIdTo)
+                        .addToSet(User.Field.FRIENDSHIP_EVENTS, FriendshipEvent.builder()
+                                .code(FriendshipEventCode.YOU_CANCELED_FRIEND_REQUEST)
+                                .params(Collections.singletonList(userIdFrom))
                                 .build()),
                 User.class);
     }
@@ -123,34 +124,34 @@ public class UserRepositoryImpl implements UserRepositoryCustom {
     @Override
     public void revokeFriendship(String userIdFrom, String userIdTo) {
         mongoTemplate.updateFirst(
-                query(where("id").is(userIdTo)),
+                Query.query(Criteria.where(User.Field.ID).is(userIdTo)),
                 new Update()
-                        .pull("friends", userIdFrom)
-                        .addToSet("friendshipEvents", FriendshipEvent.builder()
-                                .event(FriendshipEvent.Code.TARGET_REVOKED_FRIEND_REQUEST)
-                                .params(List.of(userIdFrom))
+                        .pull(User.Field.FRIENDS, userIdFrom)
+                        .addToSet(User.Field.FRIENDSHIP_EVENTS, FriendshipEvent.builder()
+                                .code(FriendshipEventCode.TARGET_REVOKED_FRIEND_REQUEST)
+                                .params(Collections.singletonList(userIdFrom))
                                 .build()),
                 User.class);
         mongoTemplate.updateFirst(
-                query(where("id").is(userIdFrom)),
+                Query.query(Criteria.where(User.Field.ID).is(userIdFrom)),
                 new Update()
-                        .pull("friends", userIdTo)
-                        .addToSet("friendshipEvents", FriendshipEvent.builder()
-                                .event(FriendshipEvent.Code.YOU_REVOKED_FRIEND_REQUEST)
-                                .params(List.of(userIdFrom))
+                        .pull(User.Field.FRIENDS, userIdTo)
+                        .addToSet(User.Field.FRIENDSHIP_EVENTS, FriendshipEvent.builder()
+                                .code(FriendshipEventCode.YOU_REVOKED_FRIEND_REQUEST)
+                                .params(Collections.singletonList(userIdFrom))
                                 .build()),
                 User.class);
     }
     
     @Override
     public void keepEvents(String id, int numberOfEventsToKeep) {
-        User user = mongoTemplate.findOne(query(where("id").is(id)), User.class);
+        User user = mongoTemplate.findOne(Query.query(Criteria.where("id").is(id)), User.class);
         List<FriendshipEvent> friendshipEvents = user.getFriendshipEvents();
         int nbToRemove = friendshipEvents.size() - numberOfEventsToKeep;
         if (nbToRemove > 0) {
             mongoTemplate.updateFirst(
-                    query(where("id").is(id)),
-                    new Update().set("friendshipEvents", friendshipEvents.subList(nbToRemove, friendshipEvents.size())),
+                    Query.query(Criteria.where(User.Field.ID).is(id)),
+                    new Update().set(User.Field.FRIENDSHIP_EVENTS, friendshipEvents.subList(nbToRemove, friendshipEvents.size())),
                     User.class);
         }
     }
@@ -158,16 +159,16 @@ public class UserRepositoryImpl implements UserRepositoryCustom {
     @Override
     public void setPassword(String id, String password) {
         mongoTemplate.updateFirst(
-                query(where("id").is(id)),
-                new Update().set("password", password),
+                Query.query(Criteria.where(User.Field.ID).is(id)),
+                new Update().set(User.Field.PASSWORD, password),
                 User.class).getMatchedCount();
     }
     
     @Override
     public void setRegistrationState(String id, RegistrationState registrationState) {
         mongoTemplate.updateFirst(
-                query(where("id").is(id)),
-                new Update().set("registrationState", registrationState),
+                Query.query(Criteria.where(User.Field.ID).is(id)),
+                new Update().set(User.Field.REGISTRATION_STATE, registrationState),
                 User.class).getMatchedCount();
     }
 }
